--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,24 +33,24 @@
 
     <!-- Changed div to main -->
     <main id="content">
-        <!-- Changed div to section and changed class to id -->
-        <section id="search-engine-optimization">
+        <!-- Changed div to section, changed class to id, and ultimately removed id entirely -->
+        <section>
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <!-- Changed div to section and removed class -->
-        <section id="online-reputation-management">
+        <!-- Changed div to section, and removed class, and ultimately removed id entirely -->
+        <section>
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <!-- Changed div to section and removed class -->
-        <section id="social-media-marketing">
+        <!-- Changed div to section, and removed class, and ultimately removed id entirely -->
+        <section>
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -60,24 +60,24 @@
     </main>
     <!-- Changed div to aside and class to id -->
     <aside id="benefits">
-        <!-- Changed div to section and class to id -->
-        <section id="benefit-lead">
+        <!-- Changed div to section, class to id, and ultimately removed id entirely -->
+        <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <!-- Changed div to section and class to id -->
-        <section id="benefit-brand">
+        <!-- Changed div to section, class to id, and ultimately removed id entirely -->
+        <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <!-- Changed div to section and class to id -->
-        <section id="benefit-cost">
+        <!-- Changed div to section, class to id, and ultimately removed id entirely -->
+        <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
