--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,13 +29,13 @@
         </nav>
     </header>
     <!-- Changed div to img, added src attribute for image source location, and changed class to id -->
-    <img id="hero" src="./assets/images/digital-marketing-meeting.jpg"/>
+    <img id="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="Group of 4 people working together at a desk."/>
 
     <!-- Changed div to main -->
     <main id="content">
         <!-- Changed div to section, changed class to id, and ultimately removed id entirely -->
         <section>
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook on desk containing search engine optimization buzz words."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -43,7 +43,7 @@
         </section>
         <!-- Changed div to section, and removed class, and ultimately removed id entirely -->
         <section>
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop on desk displaying a title that reads &OpenCurlyDoubleQuote;reputation&CloseCurlyDoubleQuote; with various charts beneath the title."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,7 +51,7 @@
         </section>
         <!-- Changed div to section, and removed class, and ultimately removed id entirely -->
         <section>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Bird's eye view of a desk with many social media-related bubbles on it."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -63,7 +63,7 @@
         <!-- Changed div to section, class to id, and ultimately removed id entirely -->
         <section>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Icon depicting a cog filtering into money."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -71,7 +71,7 @@
         <!-- Changed div to section, class to id, and ultimately removed id entirely -->
         <section>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Icon that depicts an aware, lightbulb-headed business man."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -79,7 +79,7 @@
         <!-- Changed div to section, class to id, and ultimately removed id entirely -->
         <section>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Icon that depicts a cog surrounded by 3 coins with a dollar symbol on each of them."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
